--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   margin: 0;
   padding: 0;
-  top: 70px;
+  margin-top: 70px;
   z-index: 0;
   
   // Background with image
